# opskit

./: .ansible-lint.yml  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PHASE-0-GATE.md  README.md  ROLLBACK.md  SECURITY.md  SESSION-LOG.md  ansible.cfg  galaxy.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.yml
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
agents/: incident.md  lifecycle.md  linux.md  mikrotik.md  skill-builder.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEV-GUIDE.md  ENVIRONMENT.md  SCANNING.md  SEMAPHORE.md  client-data-policy.md  environment-storage.md  ideas.md  local-agent-context.md
issues/: deploy-netbox-bms.md  deploy-semaphore-bms.md  deployment-issues-2026-07-19.md
mcp/: erpnext-mcp-server.py  semaphore-mcp-adapter.py  technitium-mcp-server.py
proposals/: deploy-netbox-bms.md  deploy-semaphore-bms.md  secure-environment-storage.md
rules/: commit-format.md  document-as-you-go.md  iac-required.md  lifecycle-auto-process.md  model-tiers.md  no-plaintext-creds.md  no-secrets.md  prefer-project-tools.md  session-persistence.md  stop-and-plan.md
schemas/: device.schema.json  directory-contract.md  env.schema.json  inventory-conventions.md  sot-adapter-interface.md
skills/: bitwarden.md
templates/: doc-template.md  infra-device-template.yml  issue-template.md  plan-template.md  skill-template.md
tests/: test_ap_sh.py  test_automation_ladder.py  test_baseline.py  test_definition_of_done_guard.py  (+8 more)
(+130 files in other folders)
