[project]
name = "opskit"
version = "0.1.0"
description = "Generic sysadmin toolset — Ansible catalogue, CMDB pipeline, MCP servers"
license = {text = "MIT"}
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "jsonschema>=4.20",
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
